tests/miniJava/neg/004292_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { length public int [] java ( ) { return 0 ; } }
